classify most of Serge's papers

--- a/_bibliography/massar_s_liq.bib
+++ b/_bibliography/massar_s_liq.bib
@@ -180,7 +180,8 @@
   issn =         {2162-2388},
   archivePrefix ={ar{X}iv},
   eprint =       {1610.06268},
-  primaryClass = {cs.ET}
+  primaryClass = {cs.ET},
+  tag =          {neuro,optics}
 }
 
 @article{Antonik_2017,
@@ -198,7 +199,8 @@
   issn =         {2331-7019},
   archivePrefix ={ar{X}iv},
   eprint =       {1802.02026},
-  primaryClass = {cs.NE}
+  primaryClass = {cs.NE},
+  tag =          {neuro,optics}
 }
 
 @article{Antonik_2017,
@@ -217,7 +219,8 @@
   issn =         {1573-773X},
   archivePrefix ={ar{X}iv},
   eprint =       {2012.10615},
-  primaryClass = {cs.NE}
+  primaryClass = {cs.NE},
+  tag =          {neuro,optics}
 }
 
 @article{Antonik_2017,
@@ -235,7 +238,8 @@
   issn =         {1866-9964},
   archivePrefix ={ar{X}iv},
   eprint =       {2012.10613},
-  primaryClass = {cs.NE}
+  primaryClass = {cs.NE},
+  tag =          {neuro,optics}
 }
 
 @article{Hermans_2016,
@@ -253,7 +257,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1610.06269},
-  primaryClass = {cs.ET}
+  primaryClass = {cs.ET},
+  tag =          {neuro,optics}
 }
 
 @article{Dremetsika_2016,
@@ -274,7 +279,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {1607.00911},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Aharon_2016,
@@ -332,7 +338,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1410.6683},
-  primaryClass = {gr-qc}
+  primaryClass = {gr-qc},
+  tag =          {qinfo}
 }
 
 @article{Fiorini_2015,
@@ -371,7 +378,8 @@
   issn =         {2334-2536},
   archivePrefix ={ar{X}iv},
   eprint =       {1501.03024},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {neuro,optics}
 }
 
 @article{Fiorini_2014,
@@ -390,7 +398,8 @@
   issn =         {1751-8121},
   archivePrefix ={ar{X}iv},
   eprint =       {1310.4125},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Duport_2014,
@@ -402,7 +411,8 @@
   day =          {12},
   archivePrefix ={ar{X}iv},
   eprint =       {1406.3238},
-  primaryClass = {cs.ET}
+  primaryClass = {cs.ET},
+  tag =          {neuro,optics},
 }
 
 @article{Olislager_2014,
@@ -421,7 +431,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1403.0805},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics,qinfo}
 }
 
 @article{Massar_2014,
@@ -438,7 +449,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1403.2509},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Kent_2014,
@@ -456,7 +468,8 @@
   issn =         {2045-2322},
   archivePrefix ={ar{X}iv},
   eprint =       {1208.0745},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Patra_2013,
@@ -532,7 +545,8 @@
   issn =         {1550-2376},
   archivePrefix ={ar{X}iv},
   eprint =       {1210.8260},
-  primaryClass = {nlin.CD}
+  primaryClass = {nlin.CD},
+  tag =          {neuro}
 }
 
 @article{Silman_2013,
@@ -572,16 +586,26 @@
   tag =          {qinfo}
 }
 
-@article{Smerieri_2012,
+@inproceedings{Smerieri_2012,
   title =        {Analog readout for optical reservoir computers},
   author =       {Smerieri, Anteo and Duport, François and Paquot, Yvan and
                   Schrauwen, Benjamin and Haelterman, Marc and Massar, Serge},
+  booktitle =    {Advances in Neural Information Processing Systems 25 (NIPS
+                  2012)},
+  editor    =    {Bartlett, Peter L. and Pereira, Fernando C. N. and Burges,
+                  Christopher J. C. and Bottou, L{\'{e}}on and Weinberger,
+                  Kilian Q.},
+  publisher =    {Curran Associates, Inc.},
+  volume =       {25},
+  pages =        {953--961},
   year =         {2012},
   month =        {Sep},
   day =          {14},
+  url =          {https://proceedings.neurips.cc/paper/2012/hash/250cf8b51c773f3f8dc8b4be867a9a02-Abstract.html},
   archivePrefix ={ar{X}iv},
   eprint =       {1209.3129},
-  primaryClass = {cs.ET}
+  primaryClass = {cs.ET},
+  tag =          {neuro,optics}
 }
 
 @article{Duport_2012,
@@ -600,6 +624,7 @@
   archivePrefix ={ar{X}iv},
   eprint =       {1207.1619},
   primaryClass = {physics.optics},
+  tag =          {neuro,optics}
 }
 
 @article{Clemmen_2012,
@@ -640,7 +665,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {1203.5527},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Olislager_2012,
@@ -697,7 +723,8 @@
   issn =         {2045-2322},
   archivePrefix ={ar{X}iv},
   eprint =       {1111.7219},
-  primaryClass = {cs.ET}
+  primaryClass = {cs.ET},
+  tag =          {neuro,optics}
 }
 
 @article{Massar_2011,
@@ -952,7 +979,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {0804.4411},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo,optics}
 }
 
 @article{Massar_2008,
@@ -969,7 +997,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {0710.0723},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Massar_2007,
@@ -1063,7 +1092,8 @@
   issn =         {1550-2368},
   archivePrefix ={ar{X}iv},
   eprint =       {hep-th/0606174},
-  primaryClass = {hep-th}
+  primaryClass = {hep-th},
+  tag =          {qinfo}
 }
 
 @article{Acin_2006,
@@ -1101,7 +1131,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0410139},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Amans_2005,
@@ -1173,7 +1204,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0502142},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Collins_2005,
@@ -1192,7 +1224,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0409221},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Gisin_2005,
@@ -1210,7 +1243,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0407021},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Lamoureux_2005,
@@ -1229,7 +1263,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0407031},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo,optics}
 }
 
 @article{Cerf_2005,
@@ -1287,7 +1322,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0412079},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Jones_2005,
