tag couple of Stefano's papers as optics

--- a/_bibliography/massar_s_liq.bib
+++ b/_bibliography/massar_s_liq.bib
@@ -488,7 +488,7 @@
   archivePrefix ={ar{X}iv},
   eprint =       {1306.0414},
   primaryClass = {quant-ph},
-  tag =          {qinfo}
+  tag =          {qinfo,optics}
 }
 
 @article{Patra_2013,
