--- a/_bibliography/pironio_s_liq.bib
+++ b/_bibliography/pironio_s_liq.bib
@@ -185,7 +185,7 @@
   archivePrefix ={ar{X}iv},
   eprint =       {1810.11648},
   primaryClass = {quant-ph},
-  tag =          {qinfo}
+  tag =          {qinfo,optics}
 }
 
 @article{Bourdoncle_2018,
@@ -505,7 +505,7 @@
   archivePrefix ={ar{X}iv},
   eprint =       {1306.0414},
   primaryClass = {quant-ph},
-  tag =          {qinfo}
+  tag =          {qinfo,optics}
 }
 
 @article{Pironio_2013,
