tag remaining pubs

--- a/_bibliography/massar_s_liq.bib
+++ b/_bibliography/massar_s_liq.bib
@@ -358,7 +358,8 @@
   issn =         {1557-735X},
   archivePrefix ={ar{X}iv},
   eprint =       {1111.0837},
-  primaryClass = {math.CO}
+  primaryClass = {math.CO},
+  tag =          {qinfo}
 }
 
 @article{Vinckier_2015,
@@ -1360,5 +1361,5 @@
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0408121},
   primaryClass = {quant-ph},
-  tag =          {qinfo}
+  tag =          {qinfo,optics}
 }
