--- a/_bibliography/silman_j_liq.bib
+++ b/_bibliography/silman_j_liq.bib
@@ -13,7 +13,8 @@
   issn =         {1572-9575},
   archivePrefix ={ar{X}iv},
   eprint =       {1101.4180},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Strauss_2011,
@@ -32,7 +33,8 @@
   issn =         {1631-073X},
   archivePrefix ={ar{X}iv},
   eprint =       {1101.3969},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Aharon_2010,
