--- a/_bibliography/pironio_s_liq.bib
+++ b/_bibliography/pironio_s_liq.bib
@@ -1,4 +1,24 @@
 @article{Pauwels_2022,
+  title =        {Entanglement in prepare-and-measure scenarios: many
+                  questions, a few answers},
+  author =       {Pauwels, Jef and Tavakoli, Armin and Woodhead, Erik and
+                  Pironio, Stefano},
+  journal =      {New Journal of Physics},
+  publisher =    {IOP Publishing},
+  volume =       {24},
+  number =       {6},
+  pages =        {063015},
+  year =         {2022},
+  month =        {Jun},
+  doi =          {10.1088/1367-2630/ac724a},
+  issn =         {1367-2630},
+  archivePrefix ={ar{X}iv},
+  eprint =       {2108.00442},
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
+}
+
+@article{Pauwels_2022,
   title =        {Adaptive advantage in entanglement-assisted communications},
   author =       {Pauwels, Jef and Pironio, Stefano and Zambrini Cruzeiro,
                   Emmanuel and Tavakoli, Armin},
@@ -47,20 +67,6 @@
   issn =         {2691-3399},
   archivePrefix ={ar{X}iv},
   eprint =       {2103.10748},
-  primaryClass = {quant-ph},
-  tag =          {qinfo}
-}
-
-@article{Pauwels_2021,
-  title =        {Entanglement in prepare-and-measure scenarios: many
-                  questions, a few answers},
-  author =       {Pauwels, Jef and Tavakoli, Armin and Woodhead, Erik and
-                  Pironio, Stefano},
-  year =         {2021},
-  month =        {Aug},
-  day =          {1},
-  archivePrefix ={ar{X}iv},
-  eprint =       {2108.00442},
   primaryClass = {quant-ph},
   tag =          {qinfo}
 }
