--- a/_bibliography/pironio_s_liq.bib
+++ b/_bibliography/pironio_s_liq.bib
@@ -1,4 +1,17 @@
 @article{Pauwels_2022,
+  title =        {Almost qudits in the prepare-and-measure scenario},
+  author =       {Pauwels, Jef and Pironio, Stefano and Woodhead, Erik and
+                  Tavakoli, Armin},
+  year =         {2022},
+  month =        {Aug},
+  day =          {16},
+  archivePrefix ={ar{X}iv},
+  eprint =       {2208.07887},
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
+}
+
+@article{Pauwels_2022,
   title =        {Entanglement in prepare-and-measure scenarios: many
                   questions, a few answers},
   author =       {Pauwels, Jef and Tavakoli, Armin and Woodhead, Erik and
